examples/type_system/failing/174_handle_missing_lbrace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/174_handle_missing_lbrace.flx
// error[E034]: Unexpected Token
//
// Expected `{` to begin `handle` arms.
//
//   examples/type_system/failing/174_handle_missing_lbrace.flx:24:21
//    |
// 24 | let x = 1 handle IO print(resume, msg) -> resume(msg)
//    |                     ^^^^^
//
// Hint:
//   Handle expressions use `expr handle Effect { ... }`.
//
// Note:
//   while parsing `handle` expression
//   Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let x = 1 handle IO print(resume, msg) -> resume(msg)
let after = 1
